atualização do html
Atualização sobre responsividade  de imagens e vídeos.

--- a/tabela_css.html
+++ b/tabela_css.html
@@ -119,7 +119,7 @@
         <tbody>
             <tr>
                 <td>border-radius</td>
-                <td></td>
+                <td>radial da borda</td>
             </tr>
         </tbody>
 
@@ -133,7 +133,7 @@
         <tbody>
             <tr>
                 <td>text-shadow</td>
-                <td></td>
+                <td>sombreamento de texto</td>
             </tr>
         </tbody>
 
@@ -181,6 +181,43 @@
                 <td> pode incluir elementos como barras laterais, anúncios, informações relacionadas, notas de rodapé ou qualquer conteúdo que seja considerado separado do fluxo principal do documento.</td>
             </tr>
         </tbody>
+
+        <tbody>
+            <tr>
+                <td>line-height</td>
+                <td>altura da linha</td>
+            </tr>
+        </tbody>
+
+        <tbody>
+            <tr>
+                <td>line-height</td>
+                <td>altura da linha</td>
+            </tr>
+        </tbody>
+
+        <tbody>
+            <tr>
+                <td>columns</td>
+                <td>número de colunas da ul</td>
+            </tr>
+        </tbody>
+
+        <tbody>
+            <tr>
+                <td>list-style-position</td>
+                <td>posição do formato de lista</td>
+                <td>inside (lado de dentro), ou outside (lado de fora, modo padrão da ul)</td>
+            </tr>
+        </tbody>
+
+        <tbody>
+            <tr>
+                <td>transition-duration</td>
+                <td>duração da transição dos movimentos do mouse na tag hover</td>
+            </tr>
+        </tbody>
+
     </table>
 
     <p>Segue abaixo o significado de cada tag dentro da tabela:</p>
