--- a/html_2.html
+++ b/html_2.html
@@ -89,7 +89,17 @@
 
             <li>Para que a imagem não crie repetições é utilizado a tag <mark>background-repeat: no-repeat;</mark>, ou é possível usar a repetição de x e y.</li>
             <li>para configurar a posição da imagem utiliza-se a tag <mark>background-position: ;</mark>. As variações dessa própriedade são: left top, left center, left bottom, right top, right center, right bottom, center top, center center e center bottom</li>
+            <li>Para mudar o tamanho da imagem basta utilizar a tag <mark>background-size: ;</mark>, para preencher a tela com toda a imagem sem provocar distorção é possível utilizar 2 tamanhos, sendo eles <mark>contain</mark> (porém nessa opção as barras laterais podem aparecer), ou <mark>cover</mark> (cobre a tela inteira, porém se o conteúdo for muito grande a barra começa a aparecer após o tamanho da imagem se encerrar)
+           </li>
             </ul>
+
+            <h3>IMAGEM COM FUNDO FIXO</h3>
+                <ul>
+                    <li>Para que a imagem fique fixa utiliza-se a tag <mark>background-attachment: ;</mark>, podendo tem 2 variavéis <mark>scroll</mark> (imagem rola junto ao contéudo, vem como padrão), ou <mark>fixed</mark> (a imagem fica fixa)</li>
+                    <li>Combinando as tag background-size: cover; + background-attachment:fixed; é possível criar uma imagem fixa, sem repetição e vazamento.</li>
+                    <li><strong>shorthand da tag background:</strong>color, image, position, repeat, size (deixou de funcionar) e attachment. </li>
+                </ul>
+
         <h1>Aúdio</h1>
         <p>Existem 2 formas de adicionar aúdio ao site:</p>
             <ul>
