--- a/tabela_css.html
+++ b/tabela_css.html
@@ -80,6 +80,21 @@
                 <td>largura</td>
             </tr>
         </tbody>
+        
+        <tbody>
+            <tr>
+                <td>max-width</td>
+                <td>largura máxima.</td>
+            </tr>
+        </tbody>
+
+        
+        <tbody>
+            <tr>
+                <td>min-width</td>
+                <td>largura mínima.</td>
+            </tr>
+        </tbody>
 
         <tbody>
             <tr>
@@ -127,13 +142,6 @@
             <tr>
                 <td>box-shadow</td>
                 <td>sombreamento de caixas</td>
-            </tr>
-        </tbody>
-
-        <tbody>
-            <tr>
-                <td>text-shadow</td>
-                <td>sombreamento de texto</td>
             </tr>
         </tbody>
 
