Atualização tabelas HTML

--- a/html_1.html
+++ b/html_1.html
@@ -141,10 +141,16 @@
             <dt>cubo mágico:</dt> <dd>é um jogo tridimensional composto de 6 faces de cores diferentes divididas cada uma em 9 partes de tamanhos iguais</dd>
         </p>
 
-   
+   <h1>TABELAS EM HTML</h1>
+        <ul>
+            <li>Hierarquia de tabela simples: table, table row, table header, table data</li>
+            <li><mark>table:</mark> serve para delimitar o tamanho da tabela.</li>
+            <li><mark>tr (table row):</mark> linhas da tabela</li>
+            <li><mark>td (table data):</mark> dados da tabela</li>
+        </ul>
 
 
     
 
 </body>
-</html>
+</htm
