--- a/tabela_css.html
+++ b/tabela_css.html
@@ -8,8 +8,8 @@
 
 </head>
 <body>
-    <table border="1">
-        <thead>
+    <table>
+        <thead> 
             <tr>
                 <th>TAG</th> <!--coluna 1-->
                 <th>SIGNIFICADO</th> <!--coluna 2-->
@@ -148,10 +148,16 @@
         <tbody>
             <tr>
                 <td>text-align</td>
-                <td>alinhamento de texto</td>
+                <td>alinhamento de texto/horizontal</td>
             </tr>
         </tbody>
 
+        <tbody>
+            <tr>
+                <td>vertical-align</td>
+                <td>alinhamento vertical</td>
+            </tr>
+        </tbody>
         <tbody>
             <tr>
                 <td>text-indent</td>
@@ -226,17 +232,35 @@
             </tr>
         </tbody>
 
+        <tbody>
+            <tr>
+                <td>border-collapse</td>
+                <td>configuração do tipo de borda de tabela</td>
+            </tr>
+        </tbody>
+
+        <tbody>
+            <tr>
+                <td>text-transform: uppercase</td>
+                <td>deixar as letras em maiusculo.</td>
+            </tr>
+        </tbody>
+
+        <tbody>
+            <tr>
+                <td>font-variant: small-caps;</td>
+                <td>deixar as letras em maiusculo.</td>
+            </tr>
+        </tbody>
+
     </table>
 
     <p>Segue abaixo o significado de cada tag dentro da tabela:</p>
         <ul>
-            <li><mark>table:</mark> tag utilizada para criar uma tabela, normalmente se adiciona border em seguida para criar as bordas da tabela</li>
             <li><mark>thead:</mark> é o cabeçalho da tabela</li>
             <li><mark>tbody: </mark>significa "corpo da tabela" é usado em conjunto com a tag thead para que a tabela fique mais harmônica</li>
             <li><mark>tfoot:</mark> rodapé da tabela</li>
-            <li><mark>tr:</mark> são as linhas da tabela</li>
             <li><mark>th:</mark> é o cabeçalho da coluna</li>
-            <li><mark>td: </mark>são os dados da tabela</li>
         </ul>
 </body>
 </html>
