--- a/html_2.html
+++ b/html_2.html
@@ -27,11 +27,13 @@
 
         div#ex2 {
             background-image: linear-gradient(to bottom, yellow, orange );
+            background-size: ;
         }
 
         div#ex3 {
             background-image: url(https://img.freepik.com/vetores-premium/padrao-de-formas-geometricas-repetidas-cubos-com-bordas-roxas-e-preenchimento-lilas-layout-sem-costura-vetorial_326821-3096.jpg)
         }
+        
         
       </style>
 </head>
@@ -201,6 +203,11 @@
                     <li>Qual é a tag de um documento HTML adicionada pra manter a compatibilidade com os caracteres acentuados, muito comuns na língua Portuguesa?</li>
                 </strong>
                     R: meta charset=“UTF-8”
+
+                <strong>
+                    <li>O primeiro passo para centralizar completamente um elemento dentro do outro (vertical e horizontal) é configurar um posicionamento especial do item que está mais internamente, usando a declaração:</li>
+                </strong>
+                    R:position: absolute;
                     </ol>
 
 </body>
