--- a/tabela_css.html
+++ b/tabela_css.html
@@ -194,6 +194,11 @@
                 <td>deixar as letras em maiusculo.</td>
             </tr>
 
+            <tr>
+                <td>overflow</td>
+                <td>conteúdo que transborda.</td>
+            </tr>
+
         </tbody>
 
     </table>
