atualização projeto redes sociais
Introduzi imagens no fundo do site nas CSS e imagens no HTML.

--- a/Projetos/redes/redes.html
+++ b/Projetos/redes/redes.html
@@ -10,9 +10,11 @@
 <body>
     <main>
         <section id="telefone">
-        </section>
             <img class="tela" src="img/tela-home.jpg" alt="tela telefone">
+        </section>
+
         <section id="redes">
+            <img class="home" src="img/logo-home.jpg" alt="tela inicial">
 
         </section>
     </main>
